@@ -1458,3 +1458,14 @@ Sudo 1.6.3p7 released.
 456) config.h.in is now generated by autoheader.
 
 Sudo 1.6.4 released.
+
+457) Move the call to rebuild_env() until after MODE_RESET_HOME is set.
+     Otherwise, the set_home option has no effect.
+
+458) Fix use of freed memory when the "fqdn" flag is set.  This was
+     introduced by the fix for the "segv when gethostbynam() fails" bug.
+
+459) Add 'continue' statements to optimize the switch statement.
+     From Solar.
+
+Sudo 1.6.4p1 released.
